<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/layout_item_summary"
    android:longClickable="false"
    android:clickable="false"
    android:focusable="false">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/ivSummaryLabel"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/colourlabel" />

        <TextView
            android:id="@+id/edSummaryTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:editable="false"
            android:maxLines="1"
            android:minLines="1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edSummaryDetails"
        android:hint="@string/details"
        />

</LinearLayout>
